--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 01:05:18 2018</p>
+         Last Run: Tue Jul 24 02:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>39</td>
-                        <td>70</td>
+                        <td>33</td>
+                        <td>69</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>65</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>35</td>
-                        <td>69</td>
+                        <td>10</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNE</td>
-                        <td>57</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>17</td>
-                        <td>76</td>
+                        <td>10</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "35",
-                 "17"
+                 "33",
+                 "10",
+                 "10"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
                  "69",
-                 "76"
+                 "70",
+                 "75"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "57",
-                 "50"
+                 "72",
+                 "60",
+                 "48"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 01:05:18 2018</p>
+         Last Run: Tue Jul 24 02:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -258,19 +258,19 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>40</td>
-                        <td>53</td>
+                        <td>36</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -282,7 +282,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>41</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -405,7 +405,7 @@
                  "15",
                  "15",
                  "15",
-                 "40",
+                 "36",
                  "41"
                ]
              },
@@ -415,10 +415,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "44",
-                 "47",
-                 "53",
-                 "66"
+                 "45",
+                 "48",
+                 "55",
+                 "67"
                ]
              },
              {
@@ -426,9 +426,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "49",
-                 "50",
+                 "43",
+                 "48",
+                 "47",
                  "50",
                  "50"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 01:05:18 2018</p>
+         Last Run: Tue Jul 24 02:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -469,14 +469,14 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>6</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -484,11 +484,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>34</td>
                         <td>5</td>
-                        <td>10</td>
-                        <td>NNW</td>
                         <td>8</td>
+                        <td>NW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -496,23 +496,23 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>7</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>6</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -520,11 +520,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>5</td>
+                        <td>N</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -570,10 +570,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "22",
                  "24",
                  "25",
-                 "26",
+                 "25",
                  "26"
                ]
              },
@@ -583,10 +583,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "22",
                  "24",
                  "25",
-                 "26",
+                 "25",
                  "26"
                ]
              }
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "32",
+                 "41",
+                 "34",
+                 "30",
                  "28",
-                 "27",
-                 "26"
+                 "27"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
                  "8",
-                 "7",
-                 "6",
-                 "5"
+                 "11",
+                 "10",
+                 "10",
+                 "9"
                ]
              }
            ]
