--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 08:05:09 2018</p>
+         Last Run: Tue Jul 24 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -36,33 +36,33 @@
                         <td>16</td>
                         <td>71</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNE</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>16</td>
+                        <td>17</td>
                         <td>71</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>69</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
                         <td>7</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,7 +171,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "16",
-                 "16",
+                 "17",
                  "7"
                ]
              },
@@ -182,7 +182,7 @@
                "data":[
                  "71",
                  "71",
-                 "75"
+                 "76"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "69",
-                 "58"
+                 "76",
+                 "70",
+                 "60"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 08:05:09 2018</p>
+         Last Run: Tue Jul 24 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -257,36 +257,36 @@
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>15</td>
+                        <td>16</td>
                         <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>32</td>
-                        <td>54</td>
+                        <td>33</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>35</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>32</td>
-                        <td>67</td>
+                        <td>31</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ESE</td>
-                        <td>38</td>
+                        <td>E</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -404,9 +404,9 @@
                "data":[
                  "15",
                  "15",
-                 "15",
-                 "32",
-                 "32"
+                 "16",
+                 "33",
+                 "31"
                ]
              },
              {
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "43",
                  "44",
                  "47",
-                 "54",
-                 "67"
+                 "53",
+                 "65"
                ]
              },
              {
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
+                 "45",
                  "50",
-                 "55",
-                 "35",
-                 "38"
+                 "53",
+                 "39",
+                 "43"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 08:05:09 2018</p>
+         Last Run: Tue Jul 24 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -474,7 +474,7 @@
                         <td>0</td>
                         <td>41</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>8</td>
                      </tr>
@@ -484,7 +484,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -496,11 +496,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -508,11 +508,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -524,7 +524,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -653,9 +653,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "41",
-                 "34",
-                 "30",
-                 "28",
+                 "35",
+                 "31",
+                 "29",
                  "28"
                ]
              },
@@ -666,9 +666,9 @@
                "data":[
                  "8",
                  "11",
+                 "11",
                  "10",
-                 "9",
-                 "8"
+                 "9"
                ]
              }
            ]
