--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 10:05:22 2018</p>
+         Last Run: Tue Jul 24 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -38,14 +38,14 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>18</td>
+                        <td>20</td>
                         <td>70</td>
                         <td>0</td>
                         <td>11</td>
@@ -171,7 +171,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "15",
-                 "18",
+                 "20",
                  "9"
                ]
              },
@@ -190,7 +190,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "59",
                  "52"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 10:05:22 2018</p>
+         Last Run: Tue Jul 24 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -250,7 +250,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -278,11 +278,11 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>24</td>
-                        <td>67</td>
+                        <td>30</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -406,7 +406,7 @@
                  "15",
                  "15",
                  "31",
-                 "24"
+                 "30"
                ]
              },
              {
@@ -418,7 +418,7 @@
                  "44",
                  "47",
                  "56",
-                 "67"
+                 "68"
                ]
              },
              {
@@ -426,8 +426,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "52",
+                 "45",
+                 "51",
                  "54",
                  "36",
                  "43"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 10:05:22 2018</p>
+         Last Run: Tue Jul 24 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -474,7 +474,7 @@
                         <td>0</td>
                         <td>41</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>8</td>
                      </tr>
@@ -484,7 +484,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -500,7 +500,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -512,7 +512,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -524,7 +524,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -653,7 +653,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "41",
-                 "34",
+                 "35",
                  "30",
                  "29",
                  "28"
@@ -666,9 +666,9 @@
                "data":[
                  "8",
                  "11",
-                 "11",
                  "10",
-                 "9"
+                 "9",
+                 "8"
                ]
              }
            ]
