--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 12:05:22 2018</p>
+         Last Run: Tue Jul 24 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>36</td>
-                        <td>69</td>
+                        <td>35</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
@@ -42,27 +42,27 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>17</td>
-                        <td>70</td>
+                        <td>36</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>56</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>9</td>
-                        <td>74</td>
+                        <td>21</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>50</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "35",
                  "36",
-                 "17",
-                 "9"
+                 "21"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
                  "70",
-                 "74"
+                 "69",
+                 "75"
                ]
              },
              {
@@ -191,8 +191,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "56",
-                 "50"
+                 "50",
+                 "38"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 12:05:22 2018</p>
+         Last Run: Tue Jul 24 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,7 +234,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -250,43 +250,43 @@
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>31</td>
+                        <td>33</td>
                         <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>24</td>
-                        <td>66</td>
+                        <td>34</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -334,7 +334,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "18",
                  "16"
                ]
@@ -347,7 +347,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "18",
                  "16"
                ]
@@ -405,8 +405,8 @@
                  "15",
                  "15",
                  "15",
-                 "31",
-                 "24"
+                 "33",
+                 "34"
                ]
              },
              {
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "42",
                  "43",
-                 "43",
-                 "47",
+                 "46",
                  "55",
-                 "66"
+                 "67"
                ]
              },
              {
@@ -427,10 +427,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "45",
+                 "49",
                  "52",
-                 "55",
-                 "37",
-                 "62"
+                 "35",
+                 "41"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 12:05:22 2018</p>
+         Last Run: Tue Jul 24 13:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -496,7 +496,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -512,7 +512,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -524,7 +524,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -654,7 +654,7 @@
                "data":[
                  "41",
                  "35",
-                 "30",
+                 "31",
                  "29",
                  "28"
                ]
@@ -667,8 +667,8 @@
                  "8",
                  "11",
                  "10",
-                 "9",
-                 "8"
+                 "10",
+                 "9"
                ]
              }
            ]
